--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="home">
         <nav>
-            <h2 class="logo">PORTFOLIO</h2>
+            <h2 class="logo">WELCOME!!!</h2>
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#Education">Education</a></li>
@@ -101,7 +101,7 @@
                             with
                             care. If you have any questions or feedback, don't hesitate to reach out.</p>
                         <p style="text-align: center;">
-                            <a class="button" href="#"> Read More</a>
+                            <a class="button" href="https://pragalvaxfrez.github.io/BMI-CALC/landing/index.html" target="_blank">PROJECT</a>
                         </p>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             with
                             care. If you have any questions or feedback, don't hesitate to reach out.</p>
                         <p style="text-align: center;">
-                            <a class="button" href="#"> Read More</a>
+                            <a class="button" href="https://pragalvaxfrez.github.io/BMI-CALC/landing/index.html"  target="_blank">PROJECT</a>
                         </p>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             with
                             care. If you have any questions or feedback, don't hesitate to reach out.</p>
                         <p style="text-align: center;">
-                            <a class="button" href="#"> Read More</a>
+                            <a class="button" href="https://pragalvaxfrez.github.io/BMI-CALC/landing/index.html" target="_blank"> PROJECT</a>
                         </p>
                     </div>
                 </div>
