--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Pragalva Sapkota</title>
+    <meta name="Description" content="Pragalva Sapkota" />
+    <meta name="Keyword" content="Pragalva Sapkota" />
+    <meta name="author" content="Pragalva Sapkota" />
+
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -21,7 +26,7 @@
             </ul>
         </nav>
         <div class="photo">
-            <img src="main2.png" alt="my image">
+            <img src="main2.png" alt="Pragalva Sapkota">
         </div>
         <section id="Home">
             <div class="content">
