--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pragalva Sapkota</title>
-    <meta name="Description" content="Pragalva Sapkota" />
-    <meta name="Keyword" content="Pragalva Sapkota" />
+    <meta name="description" content="Pragalva Sapkota" />
+    <meta name="keyword" content="Pragalva Sapkota" />
     <meta name="author" content="Pragalva Sapkota" />
 
 
@@ -27,13 +27,13 @@
             </ul>
         </nav>
         <div class="photo">
-            <img src="main2.png" alt="Pragalva Sapkota">
+            <img src="download.png" alt="Pragalva Sapkota" height="600" width="600">
         </div>
         <section id="Home">
             <div class="content">
                 <h4>Hello, my name is </h4>
                 <h1>PRAGALVA SAPKOTA</h1>
-                <h3>Im a student and Web Development Enthusiast</h3>
+                <h3>Im a student and Cloud Native Enthusiast</h3>
                 <div class="newslatter">
                     <form>
                         <input type="email" name="email" id="mail" placeholder="Enter Your Email">
