--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="home">
         <nav>
-            <h2 class="logo">WELCOME!!!</h2>
+            <h2 class="logo">WELCOME EVERYONE!!!</h2>
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#Education">Education</a></li>
